--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -46,10 +46,12 @@ Set Solarized as the default theme.
 Disable some pieces of the native UI.
 #+BEGIN_SRC emacs-lisp
   (use-package scroll-bar
+    :defer t
     :config
     (scroll-bar-mode -1))
 
   (use-package tool-bar
+    :defer t
     :config
     (tool-bar-mode -1))
 #+END_SRC
