--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -59,3 +59,12 @@ Disable some pieces of the native UI.
 #+BEGIN_SRC emacs-lisp
   (setq inhibit-startup-screen t)
 #+END_SRC
+* Window layout
+Automatically lay windows out using golden-ratio.
+#+BEGIN_SRC emacs-lisp
+  (use-package golden-ratio
+    :ensure t
+    :diminish golden-ratio-mode
+    :config
+    (golden-ratio-mode))
+#+END_SRC
