--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -68,3 +68,11 @@ Automatically lay windows out using golden-ratio.
     :config
     (golden-ratio-mode))
 #+END_SRC
+* Smartparens
+Enable strict mode for Smartparens everywhere.
+#+BEGIN_SRC emacs-lisp
+  (use-package smartparens-config
+    :ensure smartparens
+    :config
+    (smartparens-global-strict-mode))
+#+END_SRC
