--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -96,11 +96,35 @@ keybindings.
     :config
     (smartparens-global-strict-mode))
 #+END_SRC
+* Language server protocol
+Add a mode for integrating with language servers to provide
+completion, go-to-definition, etc.
+#+BEGIN_SRC emacs-lisp
+  (use-package lsp-mode
+    :defer t
+    :ensure t)
+#+END_SRC
 * Rust
+** Major mode
 Set up rust-mode and have it automatically format files using rustfmt.
 #+BEGIN_SRC emacs-lisp
   (use-package rust-mode
     :ensure t
     :config
     (setq rust-format-on-save t))
+#+END_SRC
+** Rust language server integration
+Load rust-specific pieces of lsp-mode and load it alongside rust-mode.
+#+BEGIN_SRC emacs-lisp
+  (use-package lsp-rust
+    :ensure t
+    :defer t
+    :init
+    (add-hook 'rust-mode-hook
+              (lambda ()
+                ;; Somewhat unfortunately, there doesn't seem to be a
+                ;; way to autoload lsp-rust, so we have to require it
+                ;; manually before we call lsp-mode.
+                (require 'lsp-rust)
+                (lsp-mode))))
 #+END_SRC
