Deferred rust-mode loading.

--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -110,6 +110,7 @@ Set up rust-mode and have it automatically format files using rustfmt.
 #+BEGIN_SRC emacs-lisp
   (use-package rust-mode
     :ensure t
+    :defer t
     :config
     (setq rust-format-on-save t))
 #+END_SRC
