--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -200,6 +200,12 @@ Allow for easy entry of typographical characters.
   (use-package tex
     :ensure auctex)
 #+END_SRC
+* Racket
+#+BEGIN_SRC emacs-lisp
+  (req-package racket-mode
+    :loader :elpa
+    :defer t)
+#+END_SRC
 * Finalization
 Execute our req-package statements according to the dependency graph.
 #+BEGIN_SRC emacs-lisp
