--- a/emacs.d/true-init.org
+++ b/emacs.d/true-init.org
@@ -1,7 +1,7 @@
 * Bootstrapping
 ** Initialize package.el
-We need to initialize package.el before req-package, and we also need it at
-compile time to bootstrap req-package.
+We need to initialize package.el before use-package, and we also need it at
+compile time to bootstrap use-package.
 #+BEGIN_SRC emacs-lisp
   (eval-and-compile
     (require 'package)
@@ -17,7 +17,7 @@ file very early in initialization.
     (load custom-file 'no-error))
 #+END_SRC
 ** Add package archives
-We need MELPA to install req-package, so we set these up at compile time.
+We need MELPA to install use-package, so we set these up at compile time.
 #+BEGIN_SRC emacs-lisp
   (eval-and-compile
     (setq package-archives
@@ -25,34 +25,39 @@ We need MELPA to install req-package, so we set these up at compile time.
             ("melpa" . "https://melpa.org/packages/")
             ("marmalade" . "https://marmalade-repo.org/packages/"))))
 #+END_SRC
-** Bootstrap req-package
-Install req-package if needed and require it.
+** Bootstrap use-package
+Install use-package if needed and require it.
 #+BEGIN_SRC emacs-lisp
-  (eval-and-compile
-    (unless (package-installed-p 'req-package)
+  (eval-when-compile
+    (unless (package-installed-p 'use-package)
       (package-refresh-contents)
-      (package-install 'req-package))
-    (require 'req-package))
+      (package-install 'use-package))
+    (require 'use-package))
+#+END_SRC
+** Load use-package dependencies at runtime
+Normally, loading use-package would load these, but since we only load
+use-package at compile time, we need to load them ourselves.
+#+BEGIN_SRC emacs-lisp
+  (require 'diminish)
+  (require 'bind-key)
 #+END_SRC
 * Theme
 Set Solarized as the default theme.
 #+BEGIN_SRC emacs-lisp
-  (req-package solarized-theme
-    :loader :elpa
+  (use-package solarized-theme
+    :ensure t
     :config
     (load-theme 'solarized-light 'no-confirm))
 #+END_SRC
 * Native UI
 Disable some pieces of the native UI.
 #+BEGIN_SRC emacs-lisp
-  (req-package scroll-bar
-    :loader :built-in
+  (use-package scroll-bar
     :defer t
     :config
     (scroll-bar-mode -1))
 
-  (req-package tool-bar
-    :loader :built-in
+  (use-package tool-bar
     :defer t
     :config
     (tool-bar-mode -1))
@@ -64,8 +69,8 @@ Disable some pieces of the native UI.
 * Window layout
 Automatically lay windows out using golden-ratio.
 #+BEGIN_SRC emacs-lisp
-  (req-package golden-ratio
-    :loader :elpa
+  (use-package golden-ratio
+    :ensure t
     :diminish golden-ratio-mode
     :config
     (golden-ratio-mode))
@@ -74,8 +79,7 @@ Automatically lay windows out using golden-ratio.
 Enable strict mode for Smartparens everywhere, and set up Paredit-like
 keybindings.
 #+BEGIN_SRC emacs-lisp
-  (req-package smartparens-config
-    :force
+  (use-package smartparens-config
     :ensure smartparens
     :demand
     :bind (:map smartparens-mode-map
@@ -97,16 +101,16 @@ keybindings.
 Add a mode for integrating with language servers to provide
 completion, go-to-definition, etc.
 #+BEGIN_SRC emacs-lisp
-  (req-package lsp-mode
-    :loader :elpa
+  (use-package lsp-mode
+    :ensure t
     :defer t)
 #+END_SRC
 * Rust
 ** Major mode
 Set up rust-mode and have it automatically format files using rustfmt.
 #+BEGIN_SRC emacs-lisp
-  (req-package rust-mode
-    :loader :elpa
+  (use-package rust-mode
+    :ensure t
     :defer t
     :config
     (setq rust-format-on-save t))
@@ -114,9 +118,8 @@ Set up rust-mode and have it automatically format files using rustfmt.
 ** Rust language server integration
 Load rust-specific pieces of lsp-mode and load it alongside rust-mode.
 #+BEGIN_SRC emacs-lisp
-  (req-package lsp-rust
-    :require lsp-mode rust-mode
-    :loader :elpa
+  (use-package lsp-rust
+    :ensure t
     :defer t
     :init
     (add-hook 'rust-mode-hook
@@ -131,8 +134,8 @@ Load rust-specific pieces of lsp-mode and load it alongside rust-mode.
 Set up the Superior Lisp Interaction Mode for Emacs, using SBCL and
 Quicklisp.
 #+BEGIN_SRC emacs-lisp
-  (req-package slime
-    :loader :elpa
+  (use-package slime
+    :ensure t
     :defer t
     :config
     (load (expand-file-name "~/.local/lib/quicklisp/slime-helper.el"))
@@ -142,8 +145,8 @@ Quicklisp.
 * Version control
 Set up Magit.
 #+BEGIN_SRC emacs-lisp
-  (req-package magit
-    :loader :elpa
+  (use-package magit
+    :ensure t
     :defer t)
 #+END_SRC
 * Backups
@@ -155,8 +158,7 @@ full-system backups, so I think we can turn them off.
 * Overwrite selection
 Cause the selection to be overwritten by editing commands.
 #+BEGIN_SRC emacs-lisp
-  (req-package delsel
-    :loader :built-in
+  (use-package delsel
     :config
     (delete-selection-mode))
 #+END_SRC
@@ -164,16 +166,15 @@ Cause the selection to be overwritten by editing commands.
 Proof General isn't set up as a package, so we have to have it
 installed locally. We use it to load .v files as Coq.
 #+BEGIN_SRC emacs-lisp
-  (req-package proof-site
-    :loader :path
+  (use-package proof-site
     :load-path "lisp/PG/generic/"
     :mode ("\\.v\\'" . coq-mode))
 #+END_SRC
 * Haskell
 Set up haskell-mode with REPL support.
 #+BEGIN_SRC emacs-lisp
-  (req-package haskell-mode
-    :loader :elpa
+  (use-package haskell-mode
+    :ensure t
     :defer t
     :config
     (add-hook 'haskell-mode-hook #'interactive-haskell-mode))
@@ -181,8 +182,8 @@ Set up haskell-mode with REPL support.
 * Typopunct-mode
 Allow for easy entry of typographical characters.
 #+BEGIN_SRC emacs-lisp
-  (req-package typopunct
-    :loader :elpa
+  (use-package typopunct
+    :ensure t
     :commands (typopunct-mode)
     :init
     (add-hook 'text-mode-hook #'typopunct-mode)
@@ -191,8 +192,7 @@ Allow for easy entry of typographical characters.
 #+END_SRC
 * LaTeX input method
 #+BEGIN_SRC emacs-lisp
-  (req-package latex-input
-    :loader :path
+  (use-package latex-input
     :load-path "lisp/")
 #+END_SRC
 * AucTeX
@@ -202,12 +202,7 @@ Allow for easy entry of typographical characters.
 #+END_SRC
 * Racket
 #+BEGIN_SRC emacs-lisp
-  (req-package racket-mode
-    :loader :elpa
+  (use-package racket-mode
+    :ensure t
     :defer t)
-#+END_SRC
-* Finalization
-Execute our req-package statements according to the dependency graph.
-#+BEGIN_SRC emacs-lisp
-  (req-package-finish)
 #+END_SRC
